# mini-lista-compras

./: .gitignore  README.md  Untitled-1.json
.github/instructions/: codacy.instructions.md
.github/workflows/: cd-production.yml  ci-dev.yml  ci-development.yml  fullstack-ci.yml
backend/: .dockerignore  dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: auth.py  config.py  jwt.py
backend/app/repository/: items_repository.py  shopping_list_repository.py  stats_repository.py  users_repository.py
backend/app/routes/: items.py  shopping_list.py  stats.py  user.py
backend/app/service/: database.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ItemCard.jsx  Landing.jsx  Login.jsx  Register.jsx  ShoppingList.jsx  StatsBar.jsx
frontend/src/services/: api.js
frontend/src/store/: useStore.js
